--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           </div>
           <div class="featured-image">
             <div class="image">
-                <img src="docs/OUSSAMA AMRIBD .jpg" alt="avatar">
+                <img src="OUSSAMA AMRIBD .jpg" alt="avatar">
             </div>
           </div>
           <div class="scroll-icon-box">
